Correción en la vista de las imagenes de las cards

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <article>
           <figure>
             <img
-              src="/img/JavaScript_img.jpg"
+              src="img/JavaScript_img.jpg"
               alt="JavaScript image"
             />
           </figure>
@@ -130,7 +130,7 @@
         <article>
           <figure>
             <img
-              src="/img/What-is-Golang.png"
+              src="img/What-is-Golang.png"
               alt="Golang image"
             />
           </figure>
@@ -161,7 +161,7 @@
         <article>
           <figure>
             <img
-              src="/img/rust-programming-language-logo.png"
+              src="img/rust-programming-language-logo.png"
               alt="Rust programming language image"
             />
           </figure>
@@ -193,7 +193,7 @@
         <article>
           <figure>
             <img
-              src="/img/react-js.png"
+              src="img/React-Js.png"
               alt="React.JS library image"
             />
           </figure>
