--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     Services </a> 
                 </li>
 
-                <li class="nav-item"> <a class="nav-link" href="#">
+                <li class="nav-item"> <a class="nav-link" href="contact.html">
                     <i class="fa-solid fa-envelope"></i>
                     Contact </a> 
                 </li>
