Fix: Corrección en los enlaces en el navbar y footer, junto con nuevos comentarios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--! CODIGO DEL NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark">   
     <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <i class="fa-solid fa-globe"></i> 
                 TI31BIS-DSM
             </a>
@@ -29,7 +29,7 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item" > <a class="nav-link" href="#">
+                <li class="nav-item" > <a class="nav-link" href="index.html">
                     <i class="fa-solid fa-house"></i>
                     Home</a> 
                 </li>
@@ -225,21 +225,25 @@
       <footer class="footer mt-auto">
         <div class="container">
             <div class="row">
+                
+              <!-- 'About us' del footer -->
                 <div class="col-md-4 mb-4 mb-md-0">
                     <h5> About us </h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias consequatur amet dolores optio mollitia, ex eaque illo voluptate repellat esse culpa quo veniam, velit ducimus, eius quidem! Exercitationem, aperiam dolores?</p>
                 </div>
 
+                <!-- 'Quick links' del footer -->
                 <div class="col-md-4 mb-4 mb-md-0">
                     <h5> Quick links </h5>
                     <ul class="list-unstyled footer-links">
-                        <li> <a href="#"> Home </a> </li>
+                        <li> <a href="index.html"> Home </a> </li>
                         <li> <a href="#"> About us </a> </li>
                         <li> <a href="#"> Services </a> </li>
-                        <li> <a href="#"> Contact </a> </li>
+                        <li> <a href="contact.html"> Contact </a> </li>
                     </ul>
                 </div>
 
+                <!-- 'Follow us' del footer -->
                 <div class="col-md-4">
                     <h5>Follow us</h5>
                     <div class="social-icons">
