--- a/contact.html
+++ b/contact.html
@@ -154,12 +154,12 @@
 
         <section class="section-map">
 
-            <div class="mb-3">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3734.2409433159987!2d-87.09937402574799!3d20.61903358092972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e430c84274d13%3A0x5d9ab0a38546414e!2sCENTRO%20MAYA!5e0!3m2!1ses-419!2smx!4v1729085836148!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="mb-3 content-ifrm-map">
+                <iframe class="ifrm-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3734.2409433159987!2d-87.09937402574799!3d20.61903358092972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e430c84274d13%3A0x5d9ab0a38546414e!2sCENTRO%20MAYA!5e0!3m2!1ses-419!2smx!4v1729085836148!5m2!1ses-419!2smx"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
-            <h2>Contact information</h2>
             <div class="contact-info">
+                <h2>Contact information</h2>
                 <p>
                     <i class="fa-solid fa-location-dot"></i>
                     Av. Paseos del Mayab 4000, Región 79, 77710 Playa del Carmen, Q.R.
